# oxiarc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md
completions/: _oxiarc  _oxiarc.ps1  oxiarc.bash  oxiarc.fish
man/: oxiarc-add.1  oxiarc-completion.1  oxiarc-convert.1  oxiarc-create.1  oxiarc-detect.1  oxiarc-extract.1  oxiarc-info.1  oxiarc-list.1  oxiarc-man.1  oxiarc-test.1  oxiarc.1
oxiarc-archive/: Cargo.toml  README.md  TODO.md
oxiarc-archive/src/: async_lzh.rs  async_tar.rs  async_zip.rs  detect.rs  lenient.rs  lib.rs  repair.rs  repair_tar.rs  repair_zip.rs
oxiarc-archive/src/brotli/: mod.rs
oxiarc-archive/src/bzip2/: mod.rs
oxiarc-archive/src/cab/: header.rs  mod.rs
oxiarc-archive/src/gzip/: header.rs  mod.rs
oxiarc-archive/src/iso9660/: directory_record.rs  joliet.rs  mod.rs  volume_descriptor.rs
oxiarc-archive/src/lz4/: mod.rs
oxiarc-archive/src/lzh/: extensions.rs  extensions_tests.rs  header.rs  mmap_tests.rs  mod.rs  reader.rs  stream.rs  tests.rs  writer.rs
oxiarc-archive/src/sevenz/: header.rs  mod.rs
oxiarc-archive/src/snappy/: mod.rs
oxiarc-archive/src/tar/: header.rs  lenient_tests.rs  mod.rs  raw_preserve_tests.rs  reader.rs  sparse.rs  stream.rs  writer.rs
oxiarc-archive/src/xz/: header.rs  mod.rs  sha256.rs
oxiarc-archive/src/zip/: crypto.rs  encryption.rs  header.rs  mod.rs  stream.rs
oxiarc-archive/src/zip/header/: mod.rs  reader.rs  types.rs  writer.rs
oxiarc-archive/src/zstd/: mod.rs
oxiarc-archive/tests/: lzh_ext_headers.rs  test_multifile_bug.rs  test_simple_deflate.rs  zip_encryption_e2e.rs
oxiarc-brotli/: Cargo.toml  README.md  TODO.md
oxiarc-brotli/benches/: brotli_bench.rs
oxiarc-brotli/src/: async_brotli.rs  bit_reader.rs  bit_writer.rs  compress.rs  context.rs  decompress.rs  dictionary.rs  error.rs  huffman.rs  lib.rs  lz77.rs  parallel.rs  pool.rs  streaming.rs
oxiarc-brotli/tests/: async_brotli_tests.rs  encoder_bugs.rs  high_entropy_roundtrip.rs  interop_vectors.rs  pool_brotli.rs  progress_cancel.rs
oxiarc-bzip2/: Cargo.toml  README.md  TODO.md
oxiarc-bzip2/benches/: bwt_bench.rs  bzip2_bench.rs
oxiarc-bzip2/src/: bwt.rs  decode.rs  encode.rs  huffman.rs  lib.rs  mtf.rs  rle.rs
oxiarc-cli/: Cargo.toml  README.md  TODO.md
oxiarc-cli/src/: main.rs  style.rs  utils.rs  windows.rs
oxiarc-cli/src/commands/: add.rs  convert.rs  create.rs  detect.rs  extract.rs  extract.rs.backup  extract.rs.bak  info.rs  list.rs  man.rs  mod.rs  test.rs
oxiarc-cli/tests/: cli_add.rs  cli_color.rs  cli_create_threshold.rs  cli_lenient.rs  cli_man.rs  cli_password.rs  cli_tree.rs  cli_windows_names.rs
oxiarc-core/: Cargo.toml  README.md  TODO.md
oxiarc-core/benches/: crc_bench.rs
oxiarc-core/src/: async_io.rs  bitstream.rs  cancel.rs  crc.rs  crc_simd.rs  entry.rs  error.rs  lib.rs  mmap.rs  progress.rs  ringbuffer.rs  traits.rs
oxiarc-deflate/: Cargo.toml  README.md  TODO.md
oxiarc-deflate/benches/: deflate_bench.rs  lz77_bench.rs
oxiarc-deflate/src/: async_deflate.rs  deflate.rs  gzip.rs  huffman.rs  inflate.rs  lib.rs  lz77.rs  optimal.rs  parallel.rs  pool.rs  raw_stream.rs  streaming.rs  tables.rs  zlib.rs
oxiarc-deflate/tests/: compliance.rs  edge_cases.rs
oxiarc-lz4/: Cargo.toml  README.md  TODO.md
oxiarc-lz4/benches/: lz4_bench.rs
oxiarc-lz4/src/: block.rs  dict.rs  frame.rs  hc.rs  lib.rs  xxhash.rs
oxiarc-lz4/src/frame/: compress.rs  decompress.rs  frame_dict.rs  mod.rs  streaming.rs  types.rs
oxiarc-lz4/tests/: dict_block_roundtrip.rs
oxiarc-lzhuf/: Cargo.toml  README.md  TODO.md
oxiarc-lzhuf/benches/: lzhuf_bench.rs
oxiarc-lzhuf/src/: decode.rs  encode.rs  huffman.rs  lib.rs  lzss.rs  methods.rs  optimal.rs  parallel.rs  streaming.rs
oxiarc-lzhuf/src/streaming/: decoder.rs  huffman.rs
oxiarc-lzhuf/tests/: parallel_lzhuf.rs  streaming_integration.rs
oxiarc-lzma/: Cargo.toml  README.md  TODO.md
oxiarc-lzma/benches/: lzma_bench.rs
oxiarc-lzma/src/: async_lzma.rs  decoder.rs  encoder.rs  lib.rs  lzma2.rs  lzma2_chunk.rs  lzma2_stream.rs  match_finder.rs  memory_pool.rs  model.rs  optimal.rs  parallel.rs  range_coder.rs  streaming.rs
oxiarc-lzma/tests/: async_lzma_tests.rs  budget_lzma.rs
oxiarc-lzw/: Cargo.toml  KNOWN_ISSUES.md  README.md  TODO.md
oxiarc-lzw/benches/: lzw_bench.rs
oxiarc-lzw/src/: bitstream_lsb.rs  bitstream_msb.rs  config.rs  decoder.rs  dictionary.rs  encoder.rs  error.rs  gif_lzw.rs  lib.rs  streaming.rs
oxiarc-lzw/tests/: bench_ratios.rs  code_495_test.rs  lzw_test.rs
oxiarc-snappy/: Cargo.toml  README.md  TODO.md
oxiarc-snappy/benches/: snappy_bench.rs
oxiarc-snappy/src/: async_snappy.rs  compress.rs  crc32c.rs  decompress.rs  error.rs  frame.rs  frame_parallel.rs  lib.rs  pool.rs
oxiarc-snappy/tests/: async_snappy_tests.rs  dict_snappy.rs  interop_vectors.rs  pool_snappy.rs
oxiarc-szip/: Cargo.toml  README.md
oxiarc-szip/benches/: szip_bench.rs
oxiarc-szip/src/: bitreader.rs  decode.rs  encode.rs  error.rs  lib.rs  params.rs
oxiarc-zstd/: Cargo.toml  README.md  TODO.md
oxiarc-zstd/benches/: parallel_bench.rs  zstd_bench.rs
oxiarc-zstd/src/: bitwriter.rs  compressed_block.rs  dict.rs  encode.rs  frame.rs  fse.rs  fse_encoder.rs  huffman.rs  huffman_encoder.rs  lib.rs  literals.rs  lz77.rs  sequences.rs  streaming.rs  xxhash.rs
