[workspace]
resolver = "2"
members = [
    "oxiarc-core",
    "oxiarc-deflate",
    "oxiarc-lzhuf",
    "oxiarc-lzw",
    "oxiarc-bzip2",
    "oxiarc-lz4",
    "oxiarc-zstd",
    "oxiarc-archive",
    "oxiarc-cli",
    "oxiarc-lzma",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/oxiarc"
authors = ["COOLJAPAN OU <contact@cooljapan.tech>"]
description = "Pure Rust archive/compression library - The Oxidized Archiver"
keywords = ["archive", "compression", "zip", "lzh", "deflate"]
categories = ["compression", "encoding"]

[workspace.dependencies]
# Internal crates
oxiarc-core = { version = "0.2.0", path = "oxiarc-core" }
oxiarc-deflate = { version = "0.2.0", path = "oxiarc-deflate" }
oxiarc-lzhuf = { version = "0.2.0", path = "oxiarc-lzhuf" }
oxiarc-lzw = { version = "0.2.0", path = "oxiarc-lzw" }
oxiarc-lzma = { version = "0.2.0", path = "oxiarc-lzma" }
oxiarc-bzip2 = { version = "0.2.0", path = "oxiarc-bzip2" }
oxiarc-lz4 = { version = "0.2.0", path = "oxiarc-lz4" }
oxiarc-zstd = { version = "0.2.0", path = "oxiarc-zstd" }
oxiarc-archive = { version = "0.2.0", path = "oxiarc-archive" }

# External dependencies
thiserror = "2.0.18"
encoding_rs = "0.8.35"
clap = { version = "4.5.57", features = ["derive"] }
clap_complete = "4.5.65"
indicatif = "0.18.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dialoguer = "0.11.0"
filetime = "0.2.27"
rayon = "1.11.0"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1
