[package]
name = "oxiarc-archive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
description = "Archive container format support for OxiArc (ZIP, TAR, GZIP, LZH, XZ)"
keywords = ["archive", "zip", "tar", "gzip", "xz"]
categories = ["compression", "encoding", "filesystem"]

[features]
default = []
# Memory-mapped file support for efficient large file reading
mmap = ["oxiarc-core/mmap"]
# Async I/O support via Tokio
async-io = ["oxiarc-core/async-io", "dep:tokio"]

[dependencies]
oxiarc-core.workspace = true
oxiarc-deflate.workspace = true
oxiarc-lzhuf.workspace = true
oxiarc-lzma.workspace = true
oxiarc-lz4.workspace = true
oxiarc-zstd.workspace = true
oxiarc-bzip2.workspace = true
encoding_rs.workspace = true
tokio = { workspace = true, optional = true }

[lints]
workspace = true
