[package]
name = "oxiarc-brotli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure Rust Brotli compression/decompression implementation (RFC 7932) for OxiArc"
readme = "README.md"
keywords = ["compression", "brotli", "decompression", "rfc7932", "lz77"]
categories = ["compression", "encoding"]

[dependencies]
oxiarc-core = { workspace = true }
tokio = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "brotli_bench"
harness = false

[features]
default = []
# Async I/O support via Tokio - implements AsyncCompressor/AsyncDecompressor for BrotliCompressor/BrotliDecompressor
async-io = ["oxiarc-core/async-io", "dep:tokio"]
parallel = ["dep:rayon"]

[lints]
workspace = true
