[package]
name = "oxiarc-bzip2"
description = "Pure Rust BZip2 compression/decompression for OxiArc"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["bzip2", "compression", "bwt", "huffman", "mtf"]
categories = ["compression", "encoding"]

[dependencies]
oxiarc-core = { workspace = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "bwt_bench"
harness = false

[[bench]]
name = "bzip2_bench"
harness = false

[features]
default = []
parallel = ["rayon"]

[lints]
workspace = true
