[package]
name = "oxiarc-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line interface for OxiArc archive operations"
keywords = ["cli", "archive", "compression", "zip", "lzh"]
categories = ["command-line-utilities", "compression"]

[[bin]]
name = "oxiarc"
path = "src/main.rs"

[dependencies]
oxiarc-core.workspace = true
oxiarc-archive.workspace = true
oxiarc-lzma.workspace = true
clap.workspace = true
clap_complete.workspace = true
indicatif.workspace = true
serde.workspace = true
serde_json.workspace = true
dialoguer.workspace = true
glob = "0.3"
filetime.workspace = true

[lints]
workspace = true
