[package]
name = "oxiarc-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
description = "Command-line interface for OxiArc archive operations"
keywords = ["cli", "archive", "compression", "zip", "lzh"]
categories = ["command-line-utilities", "compression"]

[[bin]]
name = "oxiarc"
path = "src/main.rs"

[dependencies]
oxiarc-core.workspace = true
oxiarc-archive.workspace = true
oxiarc-lzma.workspace = true
clap.workspace = true
clap_complete.workspace = true
indicatif.workspace = true
serde.workspace = true
serde_json.workspace = true
dialoguer.workspace = true
glob.workspace = true
filetime.workspace = true
owo-colors.workspace = true
supports-color.workspace = true
clap_mangen.workspace = true
rpassword.workspace = true

[lints]
workspace = true
