[package]
name = "oxiarc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
description = "Core components for OxiArc - BitReader/Writer, CRC, traits, and error types"
keywords = ["archive", "compression", "bitstream", "crc"]
categories = ["compression", "encoding"]

[features]
default = []
async-io = ["dep:tokio"]
# SIMD-accelerated CRC-32 using PCLMULQDQ (x86_64) or PMULL (aarch64)
simd = []
# Memory-mapped file support for efficient large file access
mmap = ["dep:memmap2"]

[dependencies]
thiserror.workspace = true
tokio = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "crc_bench"
harness = false

[lints]
workspace = true
