[package]
name = "oxiarc-deflate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure Rust DEFLATE compression algorithm (RFC 1951) for OxiArc"
keywords = ["deflate", "compression", "huffman", "lz77", "zlib"]
categories = ["compression", "encoding"]

[dependencies]
oxiarc-core.workspace = true

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "lz77_bench"
harness = false

[[bench]]
name = "deflate_bench"
harness = false

[lints]
workspace = true
