[package]
name = "oxiarc-deflate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
description = "Pure Rust DEFLATE compression algorithm (RFC 1951) for OxiArc"
keywords = ["deflate", "compression", "huffman", "lz77", "zlib"]
categories = ["compression", "encoding"]

[features]
default = []
# Async I/O support via Tokio - implements AsyncCompressor/AsyncDecompressor for Deflater/Inflater
async-io = ["oxiarc-core/async-io", "dep:tokio"]
# Parallel compression using rayon thread pool (pigz-style multi-member GZIP)
parallel = ["dep:rayon"]

[dependencies]
oxiarc-core.workspace = true
tokio = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "lz77_bench"
harness = false

[[bench]]
name = "deflate_bench"
harness = false

[lints]
workspace = true
