[package]
name = "oxiarc-lzhuf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
description = "Pure Rust LZH (LZSS + Huffman) compression for OxiArc"
keywords = ["lzh", "lha", "lzss", "compression", "huffman"]
categories = ["compression", "encoding"]

[features]
parallel = ["dep:rayon"]

[dependencies]
oxiarc-core.workspace = true
rayon = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "lzhuf_bench"
harness = false

[lints]
workspace = true
