[package]
name = "oxiarc-lzma"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "LZMA/LZMA2 compression for OxiArc (placeholder)"
keywords = ["lzma", "lzma2", "compression", "7z", "xz"]
categories = ["compression", "encoding"]

[dependencies]
oxiarc-core.workspace = true

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "lzma_bench"
harness = false

[lints]
workspace = true
