[package]
name = "oxiarc-lzw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["compression", "lzw", "tiff", "pure-rust", "archive"]
categories = ["compression", "encoding"]
description = "Pure Rust LZW compression for TIFF and GIF formats"
readme = "README.md"

[dependencies]
oxiarc-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
weezl = "0.1.12"

[[bench]]
name = "lzw_bench"
harness = false

[lints]
workspace = true

[features]
default = ["std"]
std = []
