[package]
name = "oxiarc-zstd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure Rust Zstandard (zstd) compression implementation for OxiArc"
readme = "README.md"
keywords = ["compression", "zstd", "zstandard", "fse", "huffman"]
categories = ["compression", "encoding"]

[dependencies]
oxiarc-core = { workspace = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "zstd_bench"
harness = false

[features]
default = []
parallel = ["rayon"]

[lints]
workspace = true
